--- a/portfolio.css
+++ b/portfolio.css
@@ -14,7 +14,7 @@ color: black;
 }
 
 body {
-background-image: url('file:///Users/kabirsamsi/Desktop/Screen%20Shot%202018-09-19%20at%202.40.50%20PM.png');
+background-image: url('https://kabirsamsi.github.io/Digital-Portfolio/Screen%20Shot%202018-09-19%20at%202.40.50%20PM.png');
 }
 
 #sub {
