--- a/portfolio.css
+++ b/portfolio.css
@@ -56,3 +56,12 @@ font-family: Times;
 .options {
 font-family: Times;
 }
+
+#sculpture {
+    webkit-transform: rotate(90deg);
+    moz-transform: rotate(90deg);
+    o-transform: rotate(90deg);
+    ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+
+}
