--- a/portfolio.css
+++ b/portfolio.css
@@ -7,7 +7,7 @@ color: black;
 
 #main{
   color:white;
-  font-family: Helvetica Sans;
+  font-family: Times;
   text-align: center;
   font-size: 120%;
 
