--- a/js_css/portfolio.css
+++ b/js_css/portfolio.css
@@ -14,7 +14,8 @@ color: black;
 }
 
 body {
-background-image: url('https://kabirsamsi.github.io/Digital-Portfolio/Screen%20Shot%202018-09-19%20at%202.40.50%20PM.png');
+/*background-image: url('https://kabirsamsi.github.io/Digital-Portfolio/Screen%20Shot%202018-09-19%20at%202.40.50%20PM.png');*/
+background-image: image('page_imgs/Screen Shot 2018-09-19 at 2.40.50 PM.png');
 }
 
 #sub {
