Completed changes in cycle 3 directory

--- a/js_css/portfolio.css
+++ b/js_css/portfolio.css
@@ -69,3 +69,12 @@ font-family: Times;
 #donatello {
   height: 390px;
 }
+
+#sculpture1 {
+  height: 500px;
+  width: 400px;
+}
+
+#compute {
+  height: 400px;
+}
