--- a/js_css/portfolio.css
+++ b/js_css/portfolio.css
@@ -78,3 +78,11 @@ font-family: Times;
 #compute {
   height: 400px;
 }
+
+#computer2 {
+  webkit-transform: rotate(270deg);
+  moz-transform: rotate(270deg);
+  o-transform: rotate(270deg);
+  ms-transform: rotate(270deg);
+  transform: rotate(270deg);
+}
