Changed border colors

--- a/js_css/portfolio.css
+++ b/js_css/portfolio.css
@@ -98,7 +98,7 @@ font-family: Times;
   color: black;
   background-color: aqua;
   width: 200px;
-  border-color: green;
+  border-color: black;
   border-width: 2px;
   height: 35px;
   font-size: 18px;
