Added content to all four files

--- a/js_css/portfolio.css
+++ b/js_css/portfolio.css
@@ -105,3 +105,11 @@ font-family: Times;
   height: 40px;
   font-size: 18px;
 }
+
+#vangoghpic {
+  height: 380px;
+}
+
+#link2 {
+  color: #3382ea;
+}
