Fixed icon image

--- a/js_css/portfolio.css
+++ b/js_css/portfolio.css
@@ -14,7 +14,8 @@ color: black;
 }
 
 body {
-background-image: url('https://kabirsamsi.github.io/Digital-Portfolio/js_css/background.png');
+/*background-image: url('https://kabirsamsi.github.io/Digital-Portfolio/js_css/background.png');*/
+  background-color: #1c52a8;
 }
 
 #sub {
