Fixed background image

--- a/js_css/portfolio.css
+++ b/js_css/portfolio.css
@@ -14,8 +14,7 @@ color: black;
 }
 
 body {
-/*background-image: url('https://kabirsamsi.github.io/Digital-Portfolio/js_css/background.png');*/
-  background-color: #1c52a8;
+background-image: url('https://kabirsamsi.github.io/Digital-Portfolio/js_css/background.png');
 }
 
 #sub {
