--- a/js_css/portfolio.css
+++ b/js_css/portfolio.css
@@ -14,7 +14,7 @@ color: black;
 }
 
 body {
-background-image: url('https://kabirsamsi.github.io/Digital-Portfolio/js_css/background.png');
+background-image: url("file:///Users/kabirsamsi/Coding%20Projects/JavaScript%20and%20HTML%20Projects/Front-End%20Projects/GitHub/Digital-Portfolio/backgrounds/rainbow.png");*/
 }
 
 #sub {
@@ -110,6 +110,11 @@ font-family: Times;
   height: 380px;
 }
 
-#link2 {
+#link2, #link2_ {
   color: #3382ea;
+}
+
+p {
+  margin-left: 5px;
+  margin-right: 5px;
 }
