Changed url for image

--- a/js_css/portfolio.css
+++ b/js_css/portfolio.css
@@ -14,7 +14,7 @@ color: black;
 }
 
 body {
-background-image: url("file:///Users/kabirsamsi/Coding%20Projects/JavaScript%20and%20HTML%20Projects/Front-End%20Projects/GitHub/Digital-Portfolio/backgrounds/rainbow.png");*/
+background-image: url("kabirsamsi.github.io/Digital-Portfolio/backgrounds/rainbow.png");
 }
 
 #sub {
