--- a/js_css/portfolio.css
+++ b/js_css/portfolio.css
@@ -14,7 +14,7 @@ color: black;
 }
 
 body {
-background-image: url("kabirsamsi.github.io/Digital-Portfolio/backgrounds/rainbow.png");
+background-image: url("https://raw.githubusercontent.com/KabirSamsi/Digital-Portfolio/master/backgrounds/rainbow.png");
 }
 
 #sub {
