Made changes to css file

--- a/js_css/portfolio.css
+++ b/js_css/portfolio.css
@@ -193,3 +193,15 @@ p {
 #under {
   font-size: 30px;
 }
+
+#main {
+  text-align: center;
+}
+
+#first_link_biome {
+  margin-left: 350px;
+}
+
+#first_image {
+  margin-left: 225px;
+}
