--- a/js_css/portfolio.css
+++ b/js_css/portfolio.css
@@ -205,3 +205,12 @@ p {
 #first_image {
   margin-left: 225px;
 }
+
+#icon {
+  background-repeat: no-repeat;
+  background-size: 10px;
+  width: 10px;
+  height: 10px;
+  cursor: pointer;
+  }
+}
